@@ -10,11 +10,14 @@ package org.dellroad.stuff.vaadin;
 import java.io.ObjectStreamException;
 import java.io.Serializable;
 
+import org.dellroad.stuff.java.ErrorAction;
 import org.dellroad.stuff.spring.AbstractConfigurableAspect;
 import org.springframework.beans.factory.BeanFactory;
+import org.springframework.beans.factory.BeanInitializationException;
 import org.springframework.beans.factory.aspectj.AbstractDependencyInjectionAspect;
 import org.springframework.beans.factory.wiring.BeanConfigurerSupport;
 import org.springframework.beans.factory.wiring.BeanWiringInfoResolver;
+import org.springframework.core.annotation.AnnotationUtils;
 import org.springframework.web.context.ConfigurableWebApplicationContext;
 
 /**
@@ -82,10 +85,42 @@ public aspect VaadinConfigurableAspect extends AbstractConfigurableAspect {
 // Our implementation
 
     @Override
+    public void configureBean(Object bean) {
+
+        // Verify that the application is locked by this thread, if configured to do so
+        VaadinConfigurable annotation = AnnotationUtils.findAnnotation(bean.getClass(), VaadinConfigurable.class);
+        if (annotation != null) {
+            final ErrorAction errorAction = annotation.ifApplicationNotLocked();
+            if (errorAction != ErrorAction.IGNORE) {
+                ContextApplication application = ContextApplication.currentApplication();
+                if (application != null && !Thread.holdsLock(application)) {
+                    String message = "@VaadinConfigurable bean of type " + bean.getClass().getName() + " is being instantiated"
+                      + " but the current thread has not locked the associated Vaadin application " + application;
+                    switch (errorAction) {
+                    case EXCEPTION:
+                        throw new BeanInitializationException(message);
+                    default:
+                        errorAction.execute(message);
+                        break;
+                    }
+                }
+            }
+        }
+
+        // Proceed
+        super.configureBean(bean);
+    }
+
+    @Override
     protected BeanFactory getBeanFactory(Object bean) {
 
         // Get application context
-        ConfigurableWebApplicationContext context = SpringContextApplication.get().getApplicationContext();
+        ConfigurableWebApplicationContext context;
+        try {
+            context = SpringContextApplication.get().getApplicationContext();
+        } catch (IllegalStateException e) {
+            throw new BeanInitializationException("can't get application context for autowiring @VaadinConfigurable bean", e);
+        }
 
         // Logging
         if (this.log.isTraceEnabled())
